--- a/contact.html
+++ b/contact.html
@@ -74,22 +74,22 @@
                     <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
                         <ul class="site-navigation nav navbar-nav">
                             <li>
-                                <a aria-label="Présentation de l'agence" href="acceuil#Présentation">Présentation</a>
+                                <a aria-describedby="Présentation de l'agence" href="acceuil#Présentation">Présentation</a>
                             </li>
                             <li>
-                                <a aria-label="Nos services" href="acceuil#Services">Services</a>
+                                <a aria-describedby="Nos services" href="acceuil#Services">Services</a>
                             </li>
                             <li>
-                                <a aria-label="Nos objectifs" href="acceuil#Objectifs">Objectifs</a>
+                                <a aria-describedby="Nos objectifs" href="acceuil#Objectifs">Objectifs</a>
                             </li>
                             <li>
-                                <a aria-label="Nos créations" href="acceuil#Portfolio">Portfolio</a>
+                                <a aria-describedby="Nos créations" href="acceuil#Portfolio">Portfolio</a>
                             </li>
                             <li>
-                                <a aria-label="Nous contacter" href="contact#NousContacter">Contact</a>
+                                <a aria-describedby="Nous contacter" href="contact#NousContacter">Contact</a>
                             </li>
                             <li>
-                                <a aria-label="Notre adresse" href="contact#NotreAdresse">Adresse</a>
+                                <a aria-describedby="Notre adresse" href="contact#NotreAdresse">Adresse</a>
                             </li>
                         </ul>
                     </div>
