--- a/acceuil.html
+++ b/acceuil.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" type="text/css" href="css/et-line.css">
 
     <script src="js/jquery-2.1.0.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/blocs.js"></script>
     <script src="js/jquery.touchSwipe.js" defer></script>
     <title>La Panthère Agence Web Design</title>
@@ -75,9 +75,6 @@
                     <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
                         <ul class="site-navigation nav navbar-nav">
                             <li>
-                                <a href="acceuil#Présentation">Présentation</a>
-                            </li>
-                            <li>
                                 <a href="acceuil#Services">Services</a>
                             </li>
                             <li>
@@ -87,7 +84,7 @@
                                 <a href="acceuil#Portfolio">Portfolio</a>
                             </li>
                             <li>
-                                <a href="contact#NousContacter">Contact</a>
+                                <a href="contact">Contact</a>
                             </li>
                             <li>
                                 <a href="contact#NotreAdresse">Adresse</a>
