--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <meta name="twitter:twitter:image:alt" content="La panthère meilleure agence de web design">
     <meta name="twitter:card" content="https://zzmck.github.io/Session4/img/logo.png">
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/et-line.css">
@@ -67,29 +67,26 @@
                 <nav class="navbar row">
                     <div class="navbar-header">
                         <a class="navbar-brand" href="acceuil#présentation"><img src="img/agence-la-panthere-monochrome.svg" alt="Logo de l'agence pathère" height="40"></a>
-                        <button id="nav-toggle" aria-label="Menu déroulant" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+                        <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Menu déroulant</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
                     </div>
-                    <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+                    <div class=" navbar-collapse navbar-1 special-dropdown-nav">
                         <ul class="site-navigation nav navbar-nav">
                             <li>
-                                <a aria-describedby="Présentation de l'agence" href="acceuil#Présentation">Présentation</a>
+                                <a href="acceuil#Services">Services</a>
                             </li>
                             <li>
-                                <a aria-describedby="Nos services" href="acceuil#Services">Services</a>
+                                <a href="acceuil#Objectifs">Objectifs</a>
                             </li>
                             <li>
-                                <a aria-describedby="Nos objectifs" href="acceuil#Objectifs">Objectifs</a>
+                                <a href="acceuil#Portfolio">Portfolio</a>
                             </li>
                             <li>
-                                <a aria-describedby="Nos créations" href="acceuil#Portfolio">Portfolio</a>
+                                <a href="contact">Contact</a>
                             </li>
                             <li>
-                                <a aria-describedby="Nous contacter" href="contact#NousContacter">Contact</a>
-                            </li>
-                            <li>
-                                <a aria-describedby="Notre adresse" href="contact#NotreAdresse">Adresse</a>
+                                <a href="contact#NotreAdresse">Adresse</a>
                             </li>
                         </ul>
                     </div>
@@ -128,29 +125,31 @@
                 <div class="row">
                     <div class="col-sm-6 contact_us">
                         <h3 class="text-center">Remplissez le formulaire</h3>
-                        <form id="form_1">
-                            <!--novalidate data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"-->
-                            <div class="form-group">
-                                <label arialabel="Nom" for="name">Nom</label>
-                                <input type="text" id="name" class="form-control" required>
-                            </div>
-                            <div class="form-group">
-                                <label arialabel="Email" for="email">Adresse email</label>
-                                <input type="email" id="email" class="form-control" required>
-                            </div>
-                            <div class="form-group">
-                                <label arialabel="Référence" for="reference">Comment nous avez-vous connu ?</label>
-                                <input type="text" id="reference" class="form-control" required>
-                            </div>
-                            <div class="form-group">
-                                <label arialabel="Projet" for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire)</label>
-                                <textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
-                            </div>
-                            <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+                        <fieldset>
+                            <legend>Formulaire de contact</legend>
+                            <form id="form_1">
+                                <!--novalidate data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"-->
+                                <div class="form-group">
+                                    <label for="name">Nom</label>
+                                    <input type="text" id="name" class="form-control" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">Adresse email</label>
+                                    <input type="email" id="email" class="form-control" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="reference">Comment nous avez-vous connu ?</label>
+                                    <input type="text" id="reference" class="form-control" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire)</label>
+                                    <textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+                                </div>
+                                <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						    Envoyer
 					        </button>
-                        </form>
-
+                            </form>
+                        </fieldset>
                     </div>
 
                     <div class="col-sm-6 call_us">
@@ -173,8 +172,17 @@
         </section>
         <!-- bloc-7 END -->
 
-        <!-- ScrollToTop Button -->
-        <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+        <!-- ScrollToTop Button <div id="content1">Lorem ipsum ...</div>
+   <div
+      role="scrollbar"
+      aria-controls="content1"
+      aria-orientation="vertical"
+      aria-valuemax="100"
+      aria-valuemin="0"
+      aria-valuenow="25">
+       <div class="scrollhandle"></div>
+   </div>-->
+        <a class="bloc-button btn btn-d scrollToTop" role="scrollbar" aria-controls="bloc-0" aria-orientation="vertical" aria-valuemax="100" aria-valuemin="0" aria-valuenow="25" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
         <!-- ScrollToTop Button END-->
 
 
@@ -218,7 +226,7 @@
     </main>
     <!-- Principal conteneur END -->
 
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqz3arn3v5onFyQIMqemhT7LzuvkDUrls&callback=initMap"></script>
+    <!--<script tabindex="-1" async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqz3arn3v5onFyQIMqemhT7LzuvkDUrls&callback=initMap"></script>-->
 
 </body>
 
