--- a/contact.html
+++ b/contact.html
@@ -25,14 +25,14 @@
     <meta name="twitter:twitter:image:alt" content="La panthère meilleure agence de web design">
     <meta name="twitter:card" content="https://zzmck.github.io/Session4/img/logo.png">
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/et-line.css">
 
 
     <script src="js/jquery-3.6.1.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/blocs.js"></script>
     <script src="js/jquery.touchSwipe.js" defer></script>
     <script src="js/gmaps.js"></script>
