--- a/contact.html
+++ b/contact.html
@@ -172,17 +172,9 @@
         </section>
         <!-- bloc-7 END -->
 
-        <!-- ScrollToTop Button <div id="content1">Lorem ipsum ...</div>
-   <div
-      role="scrollbar"
-      aria-controls="content1"
-      aria-orientation="vertical"
-      aria-valuemax="100"
-      aria-valuemin="0"
-      aria-valuenow="25">
-       <div class="scrollhandle"></div>
-   </div>-->
-        <a class="bloc-button btn btn-d scrollToTop" role="scrollbar" aria-controls="bloc-0" aria-orientation="vertical" aria-valuemax="100" aria-valuemin="0" aria-valuenow="25" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+
+        <!-- ScrollToTop Button -->
+        <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
         <!-- ScrollToTop Button END-->
 
 
@@ -226,7 +218,7 @@
     </main>
     <!-- Principal conteneur END -->
 
-    <!--<script tabindex="-1" async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqz3arn3v5onFyQIMqemhT7LzuvkDUrls&callback=initMap"></script>-->
+    <script tabindex="-1" async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqz3arn3v5onFyQIMqemhT7LzuvkDUrls&callback=initMap"></script>
 
 </body>
 
