Return bootstrap V3 after error script

--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,15 @@
 <head>
 
     <meta charset="utf-8">
-    <meta name="keywords" content="keyword a detailler">
+    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="La description qui déchire avec une bonne explication qui donne
-    envie de cliquer sur le lien">
+        envie de cliquer sur le lien">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name=”robots” content=”index,follow”>
     <!-- META FB og:title, og:type, og:image et og:url. -->
     <meta property="og:image" content="https://zzmck.github.io/Session4/img/logo.png">
     <meta property="og:description" content="La description qui déchire avec une bonne explication qui donne
-    envie de cliquer sur le lien">
+        envie de cliquer sur le lien">
     <meta property="og:title" content="La meilleure agence de WebDesign sur lyon">
     <meta property="og:url" content="https://zzmck.github.io/Session4/acceuil">
     <meta property="og:type" content="Je ne sais pas quoi mettre">
@@ -20,24 +20,29 @@
     <meta name="twitter:title" content="La meilleure agence de WebDesign sur lyon.">
     <meta name="twitter:site" content="https://zzmck.github.io/Session4/acceuil">
     <meta name="twitter:description" content="La description qui déchire avec une bonne explication qui donne
-    envie de cliquer sur le lien">
+        envie de cliquer sur le lien">
     <meta name="twitter:image" content="https://zzmck.github.io/Session4/img/logo.png">
     <meta name="twitter:twitter:image:alt" content="La panthère meilleure agence de web design">
     <meta name="twitter:card" content="https://zzmck.github.io/Session4/img/logo.png">
+
+    <!-- a modifier-->
+    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">-->
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/et-line.css">
 
-
-    <script src="js/jquery-3.6.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery-2.1.0.js"></script>
+    <script src="js/bootstrap.js"></script>
     <script src="js/blocs.js"></script>
-    <script src="js/jquery.touchSwipe.js" defer></script>
     <script src="js/gmaps.js"></script>
-
+    <script src="js/jquery.touchSwipe.js" defer></script>
     <title>La Panthère Agence Web Design</title>
+
+
+
 
 
     <!-- Analytics -->
@@ -57,21 +62,22 @@
 
 </head>
 
-<body>
 
+<body>
     <!-- Principal conteneur -->
     <main class="page-container">
+
         <!-- bloc-0 -->
         <header class="bloc bgc-white l-bloc menu_fixed" id="bloc-0">
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="acceuil#présentation"><img src="img/agence-la-panthere-monochrome.svg" alt="Logo de l'agence pathère" height="40"></a>
+                        <a class="navbar-brand" href="acceuil#présentation"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40"></a>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-					<span class="sr-only">Menu déroulant</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-				</button>
+                            <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+                        </button>
                     </div>
-                    <div class=" navbar-collapse navbar-1 special-dropdown-nav">
+                    <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
                         <ul class="site-navigation nav navbar-nav">
                             <li>
                                 <a href="acceuil#Services">Services</a>
@@ -104,12 +110,6 @@
                         <h1 class="text-center hero-bloc-text tc-white ">
                             Agence La Panthère
                         </h1>
-                        <div class="text-center">
-                            <h2 class="tc-white">Parlons web design !</h2>
-                            <p class="text-center mg-lg tc-white tight-width-whitespace">
-                                Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br> Parlez-nous de votre projet en complétant le formulaire ci-dessous.
-                            </p>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -120,7 +120,14 @@
         <!-- bloc-7 -->
         <section class="bloc bgc-white l-bloc" id="Formulaire">
             <h2 class="footer_contact_us" id="NousContacter">Nous contacter</h2>
-            <div class="container bloc-lg">
+            <div class="padding-top container bloc-lg ">
+
+                <div class="text-center">
+                    <h2 class="tc-white">Parlons web design !</h2>
+                    <p class="text-center mg-lg tc-white tight-width-whitespace margin_bottom">
+                        Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br> Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+                    </p>
+                </div>
 
                 <div class="row">
                     <div class="col-sm-6 contact_us">
@@ -159,7 +166,6 @@
 
                 </div>
             </div>
-
             <div class="col-sm-6 footer_find_us" id="NotreAdresse">
                 <h2>Trouver notre agence</h2>
                 <p>
@@ -176,6 +182,7 @@
         <!-- ScrollToTop Button -->
         <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
         <!-- ScrollToTop Button END-->
+
 
 
 
