--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">-->
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/et-line.css">
