--- a/acceuil.html
+++ b/acceuil.html
@@ -34,6 +34,7 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/et-line.css">
 
+    <script src="js/jquery-3.6.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/blocs.js"></script>
     <script src="js/jquery.touchSwipe.js" defer></script>
