--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,9 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/et-line.css">
 
-    <script src="js/jquery-3.6.1.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/jquery-2.1.0.js"></script>
+    <script src="js/jqBootstrapValidation.js"></script>
+    <script src="js/formHandler.js"></script>
     <script src="js/blocs.js"></script>
     <script src="js/gmaps.js"></script>
     <script src="js/jquery.touchSwipe.js" defer></script>
@@ -137,20 +138,40 @@
                             <form id="form_1">
                                 <!--novalidate data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"-->
                                 <div class="form-group">
-                                    <label for="name">Nom</label>
-                                    <input type="text" id="name" class="form-control" required>
+                                    <label class="control-label" for="email">Email address</label>
+                                    <div class="controls">
+                                        <input type="email" name="email" id="email" required="">
+                                        <p class="help-block">Adresse email pour vous contacter</p>
+                                    </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="email">Adresse email</label>
-                                    <input type="email" id="email" class="form-control" required>
+                                    <label class="control-label" for="name">Nom :</label>
+                                    <div class="controlss">
+                                        <input type="text" name="name" id="name" required="">
+                                        <p class="help-block">Votre nom</p>
+                                    </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="reference">Comment nous avez-vous connu ?</label>
+                                    <label class="control-label" for="email">Email :</label>
+                                    <div class="controls">
+                                        <input type="email" name="email" id="email" required="">
+                                        <p class="help-block">Adresse email pour vous contacter</p>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label" for="reference">Comment nous avez-vous connu ?</label>
+                                    <div class="controls">
+                                        <input type="text" name="reference" id="reference" required="">
+                                        <p class="help-block">Comment nous avez-vous connu ?</p>
+                                    </div>
                                     <input type="text" id="reference" class="form-control" required>
                                 </div>
                                 <div class="form-group">
-                                    <label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire)</label>
-                                    <textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+                                    <label class="control-label" for="message">Brief de votre projet</label>
+                                    <div class="controls">
+                                        <textarea name="message" id="message" required=""></textarea>
+                                        <p class="help-block">Brief du projet, ajoutez autant de détails que néccessaire.</p>
+                                    </div>
                                 </div>
                                 <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						    Envoyer
