--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,10 @@
     <link rel="stylesheet" type="text/css" href="css/et-line.css">
 
     <script src="js/jquery-2.1.0.js"></script>
+    <script src="js/Bootstrap.js"></script>
+    <script src="js/blocs.js"></script>
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/formHandler.js"></script>
-    <script src="js/blocs.js"></script>
     <script src="js/gmaps.js"></script>
     <script src="js/jquery.touchSwipe.js" defer></script>
     <title>La Panthère Agence Web Design</title>
