--- a/acceuil.html
+++ b/acceuil.html
@@ -31,7 +31,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <!--<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">-->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
+    <!--<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">-->
     <!--<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css">-->
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
