--- a/contact.html
+++ b/contact.html
@@ -29,18 +29,21 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     <!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">-->
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <!--<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">-->
+    <!--<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">-->
+    <!--<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css">-->
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/et-line.css">
 
     <script src="js/jquery-2.1.0.js"></script>
-    <script src="js/Bootstrap.js"></script>
+    <script src="js/bootstrap.js"></script>
     <script src="js/blocs.js"></script>
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/formHandler.js"></script>
-    <script src="js/gmaps.js"></script>
     <script src="js/jquery.touchSwipe.js" defer></script>
+    <script src="js/gmaps.js"></script>
     <title>La Panthère Agence Web Design</title>
 
 
