--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
-    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-    <link rel="stylesheet" type="text/css" href="./css/et-line.css">
+    <!--<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="./css/et-line.css">-->
 
 
-    <script src="./js/jquery-2.1.0.js"></script>
-    <script src="./js/bootstrap.js"></script>
-    <script src="./js/blocs.js"></script>
+    <!--<script src="./js/jquery-2.1.0.js"></script>-->
+    <script src="js/bootstrap.js"></script>
+    <!--<script src="./js/blocs.js"></script>
     <script src="./js/jquery.touchSwipe.js" defer></script>
-    <script src="./js/gmaps.js"></script>
+    <script src="./js/gmaps.js"></script>-->
 
-    <title>.</title>
+    <title>La Panthère - Agence Web design</title>
 
 
     <!-- Analytics -->
@@ -86,7 +86,9 @@
             <div class="container bloc-md">
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                        <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+                        <p>
+                            L'agence La Panthère est une agnce de web design qui aide<br> les entreprises à devenir attractives et visibles sur internet
+                        </p>
                     </div>
                 </div>
                 <div class="row voffset-lg med-width-whitespace">
@@ -126,8 +128,9 @@
                 </div>
                 <div class="row voffset-lg voffset">
                     <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-                        <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
+                        <p>"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous as aidé à doubler nos ventes en lignes sur Lyon."
+                        </p>
+                        <p>Maxime Guibard, PDG de À vos fourchettes</p>
                     </div>
                 </div>
             </div>
@@ -158,7 +161,7 @@
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                        <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+                        <p>Nous travaillons avec beaucoup de clients,<br> voici nos réalisations.</p>
                     </div>
                 </div>
                 <div class="row tight-width-whitespace portfolio-row">
