--- a/index.html
+++ b/index.html
@@ -6,19 +6,46 @@
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+
+    <meta name="twitter:image:src" content="imageslink">
+    <meta name="twitter:site" content="@lapanthere">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="La meilleur agence de web design">
+    <meta name="twitter:description" content="description qui déchire">
+
+    <meta property="og:image" content="imageslink">
+    <meta property="og:image:alt" content="description de l'image">
+    <meta property="og:site_name" content="La Panthère">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="La meilleur agence de web design">
+    <meta property="og:url" content="https://zzmck.github.io/Session4/Acceuil">
+    <meta property="og:description" content="description qui déchire">
+
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <!--<link rel="stylesheet" type="text/css" href="style.css">
+    <!--<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.rtl.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-reboot.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-reboot-rtl.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-utilities.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-utilities.rtl.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="./css/et-line.css">-->
 
 
-    <!--<script src="./js/jquery-2.1.0.js"></script>-->
+    <!--<script src="./js/jquery-2.1.0.js"></script>
+    <script src="js/index.js"></script>
     <script src="js/bootstrap.js"></script>
-    <!--<script src="./js/blocs.js"></script>
+    <script src="js/bootstrap.bundle.js"></script>
+    <script src="js/bootstrap.esm.js"></script>
+    <script src="./js/blocs.js"></script>
     <script src="./js/jquery.touchSwipe.js" defer></script>
-    <script src="./js/gmaps.js"></script>-->
+    <script src="./js/gmaps.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.2/dist/index.bundle.min.js"></script>
+-->
+    <link href="css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
     <title>La Panthère - Agence Web design</title>
 
@@ -39,9 +66,7 @@
 
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
                         <a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
-                        <div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -69,7 +94,7 @@
                 <div class="row tight-width-whitespace">
                     <div class="col-sm-12">
                         <img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris" />
-                        <h1 class="text-center hero-bloc-text tc-white ">
+                        <h1 class="text-center hero-bloc-text text-white ">
                             Agence La Panthère
                         </h1>
                         <div class="text-center">
@@ -82,7 +107,7 @@
         <!-- bloc-1-presentation END -->
 
         <!-- bloc-2-services -->
-        <div class="bloc bgc-white l-bloc" id="bloc-2-services">
+        <div class="bloc bg-white l-bloc" id="bloc-2-services">
             <div class="container bloc-md">
                 <div class="row">
                     <div class="col-sm-12 text-center">
@@ -138,14 +163,14 @@
         <!-- bloc-2-services END -->
 
         <!-- bloc-3-what-i-do -->
-        <div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+        <div class="bloc text-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
             <div class="container bloc-lg">
                 <div class="row tight-width-whitespace black-background">
                     <div class="col-sm-12">
-                        <h2 class="mg-md text-center tc-white">
+                        <h2 class="mg-md text-center text-white">
                             Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
                         </h2>
-                        <p class="text-center white">
+                        <p class="text-center text-white">
                             Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre
                             site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link"
                                 href="page2.html">Contactez notre équipe</a><br>
@@ -157,16 +182,35 @@
         <!-- bloc-3-what-i-do END -->
 
         <!-- bloc-4-portfolio -->
-        <div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+        <div class="bloc bg-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-12 text-center">
                         <p>Nous travaillons avec beaucoup de clients,<br> voici nos réalisations.</p>
                     </div>
                 </div>
+                <div class="row">
+                    <a href="img/2.jpg" data-toggle="lightbox" data-size="m" data-gallery="Nos réalisations" class="col-sm-4">
+                        <img src="img/1.jpg" class="img-fluid">
+                    </a>
+                    <a href="img/1.jpg" data-toggle="lightbox" data-size="m" data-gallery="Nos réalisations" class="col-sm-4">
+                        <img src="img/2.jpg" class="img-fluid">
+                    </a>
+                </div>
+                <div class="row">
+                    <a href="img/3.jpg" data-toggle="lightbox" data-size="m" data-gallery="Nos réalisations" class="col-sm-4">
+                        <img src="img/3.jpg" class="img-fluid">
+                    </a>
+                    <a href="img/4.jpg" data-toggle="lightbox" data-size="m" data-gallery="Nos réalisations" data-lightbox="1" class="col-sm-4">
+                        <img src="img/4.jpg" class="img-fluid">
+                    </a>
+                </div>
+
+
                 <div class="row tight-width-whitespace portfolio-row">
                     <div class="col-sm-6">
-                        <a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+                        <a href="img/1.jpg" data-toggle="lightbox" data-gallery="gallery-1" data-caption="caption 1">
+                            <img src="img/1.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-fluid" /></a>
                         <h3 class="mg-md text-center">
                             Refonte d'un site web pour un journal local
                         </h3>
@@ -302,6 +346,8 @@
     </div>
     <!-- Principal conteneur END -->
 
+    <script src="js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script id="bs5-lightbox" src="js/index.bundle.min.js"></script>
 
 </body>
 
