--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		
 	<link rel="shortcut icon" type="image/png" href="favicon.webp">
 	<!-- Pré load font-->
-    <link rel="preload" as="font">
+    <link rel="preload" src="fonts/et-line.woff" as="font">
 	<!-- Preconnect to CDN For Bootstrap -->
 	<link rel="preconnect" href="https://cdn.jsdelivr.net">
 	<!-- CSS Bootstrap Last Version 5.2.3 -->
@@ -56,7 +56,7 @@
 	<main class="page-container">
     
 	<!-- SECTION menu START-->
-	<section class="bg-white sticky-top">
+	<div class="bg-white sticky-top">
 		<div class="container">
 			<nav class="navbar navbar-expand-md navbar-white  navbar-light bg-white">
 				<div class="container-fluid float-end">
@@ -79,11 +79,11 @@
 				</div>
 			</nav>
 		</div>
-	</section>
+	</div>
 <!-- SECTION menu END -->
 
 <!-- bloc-1-presentation -->
-<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax">
+<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
@@ -97,11 +97,11 @@
 			</div>
 		</div>
 	</div>
-</section>
+</div>
 <!-- bloc-1-presentation END -->
 
 <!-- bloc-2-services -->
-<section class="bloc bgc-white l-bloc" id="Services">
+<div class="bloc bgc-white l-bloc" id="Services">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
@@ -148,11 +148,11 @@
 			</div>
 		</div>
 	</div>
-</section>
+</div>
 <!-- bloc-2-services END -->
 
 <!-- bloc-3-what-i-do -->
-<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="Presentation">
+<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="Presentation">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
@@ -165,11 +165,11 @@
 			</div>
 		</div>
 	</div>
-</section>
+</div>
 <!-- bloc-3-what-i-do END -->
 
 <!-- bloc-4-portfolio -->
-<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="Portfolio">
+<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="Portfolio">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
@@ -217,11 +217,11 @@
 			</div>
 		</div>
 	</div>
-</section>
+</div>
 <!-- bloc-4-portfolio END -->
 
 <!-- bloc-5-cta -->
-<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="contact">
+<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="contact">
 	<div class="container bloc-lg">
 		<div class="row">
 			<h2 class="mg-md text-center tc-white">
@@ -232,7 +232,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</div>
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
