--- a/index.html
+++ b/index.html
@@ -238,41 +238,38 @@
 </div>
 <!-- bloc-5-cta END -->
 
-<!-- Footer - bloc-8 -->
-<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-	<div class="container bloc-sm">
-		<div class="row">
-			<div class="col-sm-12">
-				<p class="text-center white">
-					Agence La Panthère - Agence web basée à Lyon.<br>
-				</p>
-				<div class="row row-no-gutters social">
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+<!-- START Footer -->
+<footer aria-label="footer navigation">
+			<div class="bloc bgc-atomic-tangerine">
+				<div class="container py-5">
+					<h2 class="text-center fw-bold  text-black">La Panthère<br>Agence web basée à Lyon.</h2>
+					<div class="row row-no-gutters social  py-5">
+						<div class="col-sm-3">
+							<div class="text-center" id="twitter">
+								<a class="social" href="#twitter" aria-label="Nous suivre sur Twitter"><i class="fa-brands fa-twitter icon-md"></i></a>
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center" id="facebook">
+								<a class="social" href="#facebook" aria-label="Nous suivre sur Facebook"><i class="fa-brands fa-facebook icon-md"></i></a>
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center" id="dribbble">
+								<a class="social" href="#dribbble" aria-label="Nous suivre sur Dribbble"><i class="fa-brands fa-dribbble icon-md"></i></a>
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center" id="instagram">
+								<a class="social" href="#instagram" aria-label="Nous suivre sur Instagram"><i class="fa-brands fa-instagram icon-md"></i></a>
+							</div>
 						</div>
 					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
-						</div>
-					</div>
+					<p class=" text-center  text-black">Copyright La panthère 2022</p>
 				</div>
 			</div>
-		</div>
-	</div>
 </footer>
-<!-- Footer - bloc-8 END -->
+<!-- END Footer -->
 <!-- START BackToTop Button-->
 <button type="button" class="btn btn-floating btn-lg" id="btn-back-to-top" aria-label="Remonter en haut de la page">
 	<i class="fa-brands fa-arrow-up text-black"></i>
