--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		
 	<link rel="shortcut icon" type="image/png" href="favicon.webp">
 	<!-- Pré load font-->
-    <link rel="preload" src="fonts/et-line.woff" as="font">
+    <link rel="preload" href="fonts/et-line.woff" as="font" type="font/woff" crossorigin>
 	<!-- Preconnect to CDN For Bootstrap -->
 	<link rel="preconnect" href="https://cdn.jsdelivr.net">
 	<!-- CSS Bootstrap Last Version 5.2.3 -->
