Ajout GoogleAnalitic et correction bug style.css

--- a/index.html
+++ b/index.html
@@ -54,33 +54,34 @@
     <title>La Panthère Web Design</title>
 </head>
 <body>
-<header>	<!-- SECTION menu START-->
-	<div class="bg-white sticky-top">
-			<div class="container">
-				<nav class="navbar navbar-expand-md navbar-white  navbar-light bg-white ">
-					<div class="container-fluid float-end">
-						<a href="index.html" aria-label="Aller sur notre Page D'Accueil"><img src="img/logo-agence-panthere.webp" class="image-resize-logo" alt="Bannière de Notre Agence De Design Panthère Sur Fond Blanc"></a>
+	<header>	
+		<!-- SECTION menu START-->
+		<div class="bg-white sticky-top">
+				<div class="container">
+					<nav class="navbar navbar-expand-md navbar-white  navbar-light bg-white ">
+						<div class="container-fluid float-end">
+							<a href="index.html" aria-label="Aller sur notre Page D'Accueil"><img src="img/logo-agence-panthere.webp" class="image-resize-logo" alt="Bannière de Notre Agence De Design Panthère Sur Fond Blanc"></a>
 
-						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-expanded="false" aria-controls="menu" aria-label="Ouvrir le menu">
-							<span class="navbar-toggler-icon"></span>
-						</button>
-						<div class="collapse navbar-collapse" id="menu">
-							<ul class="site-navigation nav">
-								<li class="nav-item"><a href="index.html" class="rounded-pill nav-link" aria-label="Page d'accueil">accueil</a></li>
-								<li class="nav-item"><a href="index.html#Services" class="rounded-pill nav-link" aria-label="Nos Services">Services</a></li>
-								<li class="nav-item"><a href="index.html#Presentation" class="rounded-pill nav-link" aria-label="Nos présentations">Présentation</a></li>
-								<li class="nav-item"><a href="index.html#Portfolio" class="rounded-pill nav-link" aria-label="Notre Portfoliol">Portfolio</a></li>
-								<li class="nav-item"><a href="contact.html" class="rounded-pill nav-link" aria-label="Nous contacter">Contact</a></li>
+							<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-expanded="false" aria-controls="menu" aria-label="Ouvrir le menu">
+								<span class="navbar-toggler-icon"></span>
+							</button>
+							<div class="collapse navbar-collapse" id="menu">
+								<ul class="site-navigation nav">
+									<li class="nav-item"><a href="index.html" class="rounded-pill nav-link" aria-label="Page d'accueil">accueil</a></li>
+									<li class="nav-item"><a href="index.html#Services" class="rounded-pill nav-link" aria-label="Nos Services">Services</a></li>
+									<li class="nav-item"><a href="index.html#Presentation" class="rounded-pill nav-link" aria-label="Nos présentations">Présentation</a></li>
+									<li class="nav-item"><a href="index.html#Portfolio" class="rounded-pill nav-link" aria-label="Notre Portfoliol">Portfolio</a></li>
+									<li class="nav-item"><a href="contact.html" class="rounded-pill nav-link" aria-label="Nous contacter">Contact</a></li>
 
-							</ul>
+								</ul>
+							</div>
+
 						</div>
-
-					</div>
-				</nav>
-			</div>
-	</div>
-	<!-- SECTION menu END -->
-</header>
+					</nav>
+				</div>
+		</div>
+		<!-- SECTION menu END -->
+	</header>
 
 	<!-- MAIN conteneur START-->
 	<main class="page-container">
@@ -308,7 +309,17 @@
 	
 <!-- Analytics -->
      <!-- Google tag (gtag.js) -->
-
+	 <script async src="https://www.googletagmanager.com/gtag/js?id=G-9BQBKDFYLW" defer></script>
+	 <script>
+		 window.dataLayer = window.dataLayer || [];
+ 
+		 function gtag() {
+			 dataLayer.push(arguments);
+		 }
+		 gtag('js', new Date());
+ 
+		 gtag('config', 'G-9BQBKDFYLW');
+	 </script> 
 <!-- Analytics END -->
 </body>
 </html>
