--- a/contact.html
+++ b/contact.html
@@ -10,12 +10,12 @@
 	<meta name="compression" content="Accept-Encoding: gzip, compress, br">
 
 	<!-- Start Meta card for Facebook -->
-	<meta property="og:image" content="https://zzmck.github.io/Parcour4/img/logo.webp">
+	<meta property="og:image" content="https://zzmck.github.io/Session4/img/logo.webp">
     <meta property="og:image:alt" content="Logo La Panthère Sur Fond Blanc">
     <meta property="og:site_name" content="La Panthère Web Design">
     <meta property="og:type" content="website">
     <meta property="og:title" content="La meilleur agence de web design">
-    <meta property="og:url" content="https://zzmck.github.io/Parcour4/index.html">
+    <meta property="og:url" content="https://zzmck.github.io/Session4/index.html">
     <meta property="og:description" content="Notre Agence de Web Design aide les Entrepreneurs et Les Entreprises à Devenir Attractive et Visible sur Internet, Nous réalisons Vos Objectifs De Site Moderne Et Réactif.">
 	
 	<!-- START Meta Card for Twitter in English -->
@@ -23,7 +23,7 @@
     <meta name="twitter:creator" content="@lapanthereWebDesign">
 	<meta name="twitter:title" content="The Best Web Design Agency">
     <meta name="twitter:description" content="Our Web Design Agency helps Entrepreneurs and Businesses to Become Attractive and Visible on the Internet, We realize Your Modern And Responsive Site Objectives.">
-	<meta name="twitter:image" content="https://zzmck.github.io/Parcour4/img/logo.webp">
+	<meta name="twitter:image" content="https://zzmck.github.io/Session4/img/logo.webp">
 	<meta name="twitter:image:alt" content="Logo La Panthère BackGround White">
 	<meta name="twitter:card" content="summary_large_image">
 	
@@ -32,7 +32,7 @@
     
     
 	<!-- Alternate HrefLang for default -->
-	<link rel="alternate" hreflang="x-default" href="https://zzmck.github.io/Parcour4/contact.html">
+	<link rel="alternate" hreflang="x-default" href="https://zzmck.github.io/Session4/contact.html">
 	<!-- Preconnect to CDN For Bootstrap -->
 	<link rel="preconnect" href="https://cdn.jsdelivr.net">
 	<!-- CSS Bootstrap Last Version 5.2.3 -->
