modif index title

--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
 		</div>
 		<!-- SECTION menu END -->
 	</header>
-
 	<!-- MAIN conteneur START-->
 	<main class="page-container">
 		<!-- START Title -->
@@ -213,6 +212,7 @@
 			<div class="container bloc-lg">
 				<div class="row  justify-content-center">
 					<div class="w-50 text-black pb-5">
+						<h2 style="display:none">Notre Portfolio</h2>
 						<p class="text-center h4">Nous travaillons avec beaucoup de clients,<br>voici nos réalisations.
 						</p>
 					</div>
@@ -225,9 +225,9 @@
 								alt="Refonte d'un site web pour un journal local">
 						</a>
 						<div class="card-body">
-							<h2 class="mg-md text-center fs-5">
+							<h3 class="mg-md text-center fs-5">
 								Refonte d'un site web pour un journal local
-							</h2>
+							</h3>
 							<p class="text-center fs-6">
 								Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 							</p>
@@ -240,9 +240,9 @@
 								alt="Création d'un site web pour photographes">
 						</a>
 						<div class="card-body">
-							<h2 class="mg-md text-center fs-5">
+							<h3 class="mg-md text-center fs-5">
 								Création d'un site web pour photographes
-							</h2>
+							</h3>
 							<p class="text-center fs-6">
 								Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 							</p>
@@ -258,9 +258,9 @@
 								alt="Création d'un site internet pour un voyageur">
 						</a>
 						<div class="card-body">
-							<h2 class="mg-md text-center fs-5">
+							<h3 class="mg-md text-center fs-5">
 								Création d'un site internet pour un voyageur
-							</h2>
+							</h3>
 							<p class="text-center fs-6">
 								Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les
 								articles de ce voyageur.
@@ -275,9 +275,9 @@
 								alt="Conception d'un site pour une agence de mariage">
 						</a>
 						<div class="card-body">
-							<h2 class="mg-md text-center fs-5">
+							<h3 class="mg-md text-center fs-5">
 								Conception d'un site pour une agence de mariage
-							</h2>
+							</h3>
 							<p class="text-center fs-6">
 								Nous avons travaillé avec cette agence pour créer un site internet permettant la
 								présentation détaillée de leurs prestations.
@@ -345,7 +345,6 @@
 			</div>
 		</footer>
 		<!-- END Footer -->
-
 		<!-- START BackToTop Button-->
 		<button type="button" class="btn btn-floating btn-lg" id="btn-back-to-top"
 			aria-label="Remonter en haut de la page">
@@ -362,7 +361,6 @@
 		<script src="js/backToTop.js" defer></script>
 	</main>
 	<!-- MAIN conteneur END -->
-
 	<!-- Analytics -->
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-9BQBKDFYLW" defer></script>
