modification title index

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="card border-0 bg-transparent d-flex align-items-center py-5">
-						<h2 style="display:none">Via Notre Formulaire De Contact</h2>
+						<h2 style="display:none">Notre Formulaire De Contact</h2>
 						<div class="card-body">
 							<p class="text-center text-white fs-5">
 								Pret à redonner vie à vos projets ?<br>Contactez notre équipe !
@@ -313,7 +313,8 @@
 		<footer aria-label="footer navigation">
 			<div class="bloc bgc-atomic-tangerine">
 				<div class="container py-5">
-					<h2 class="text-center fw-bold  text-black">La Panthère<br>Agence web basée à Lyon.</h2>
+					<h2 style="display:none">Nos liens vers les réseaux sociaux</h2>
+					<p class="text-center fw-bold  text-black">La Panthère<br>Agence web basée à Lyon.</p>
 					<div class="row row-no-gutters social  py-5">
 						<div class="col-sm-3">
 							<div class="text-center" id="twitter">
